--- a/BolWallet/Views/MainPage.xaml
+++ b/BolWallet/Views/MainPage.xaml
@@ -37,10 +37,10 @@
 
             <Button
                 Grid.Row="3"
-                Command="{Binding NavigateToUserPageCommand}"
+                Command="{Binding NavigateToAccountMainPageCommand}"
                 FontAttributes="Bold"
                 HorizontalOptions="Center"
-                Text="User" />
+                Text="Retrieve Account" />
         </Grid>
     </ScrollView>
 </ContentPage>
