--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -6,44 +6,55 @@
     x:DataType="viewModels:MainWithAccountViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
-    <ScrollView>
-        <Grid
+	<ScrollView>
+		<Grid
             Padding="{OnPlatform iOS='30,60,30,30',
                                  Default='30'}"
-            RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
+            RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
             ColumnDefinitions="*,*,*"
             RowSpacing="25"
             ColumnSpacing="8">
 
-            <Label
-                Grid.Row="0"
-                Grid.ColumnSpan="3"
-                FontSize="32"
-                HorizontalOptions="Center"
-                HorizontalTextAlignment="Center"
-                SemanticProperties.HeadingLevel="Level1"
-                Text="{Binding WelcomeText}" />
+			<Label 
+				Grid.Row="0"
+                Grid.ColumnSpan="3" 
+				Text="Codename" 
+				TextColor="Black"/>
+			<Frame   
+				Grid.Row="1"
+                Grid.ColumnSpan="3" 
+				BackgroundColor="WhiteSmoke" 
+				Padding="10">
+				<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
+					<Label.GestureRecognizers>
+						<TapGestureRecognizer Tapped="OnTapCopy"/>
+					</Label.GestureRecognizers>
+				</Label>
+			</Frame>
 
-            <Image
-                Grid.Row="1"
-                Grid.ColumnSpan="3"
-                HeightRequest="310"
-                HorizontalOptions="Center"
-                SemanticProperties.Description="Welcome to Bol"
-                Source="bol_logo"
-                WidthRequest="250" />
+			<Label 
+				Grid.Row="2"
+                Grid.ColumnSpan="3" 
+				Text="Total Balance" 
+				TextColor="Black"/>
+			<Frame   
+				Grid.Row="3"
+                Grid.ColumnSpan="3" 
+				BackgroundColor="WhiteSmoke" 
+				Padding="10">
+				<Label Text="{Binding BolAccount.TotalBalance}" TextColor="Black"/>
+			</Frame>
 
-            <Button
-                Grid.Row="2"
+			<Button
+                Grid.Row="4"
                 Grid.ColumnSpan="3"
-                Clicked="OnClickTodo"
                 FontAttributes="Bold"
                 FontSize="8"
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding AccountText}" />
 
-            <Button
-                Grid.Row="3"
+			<Button
+                Grid.Row="5"
                 Grid.ColumnSpan="3"
                 Command="{Binding NavigateToSendBolPageCommand}"
                 FontAttributes="Bold"
@@ -51,8 +62,8 @@
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding SendText}" />
 
-            <Button
-                Grid.Row="4"
+			<Button
+                Grid.Row="6"
                 Grid.ColumnSpan="3"
                 Command="{Binding NavigateToRetrieveBolPageCommand}"
                 FontAttributes="Bold"
@@ -60,17 +71,17 @@
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding RecieveText}" />
 
-            <Button
-                Grid.Row="5"
+			<Button
+                Grid.Row="7"
                 Grid.Column="0"
-                Clicked="OnClickTodo"
                 FontAttributes="Bold"
                 FontSize="8"
                 HorizontalOptions="FillAndExpand"
+                Command="{Binding ClaimCommand}"
                 Text="{Binding ClaimText}" />
 
-            <Button
-                Grid.Row="5"
+			<Button
+                Grid.Row="7"
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
                 Command="{Binding NavigateToMoveClaimPageCommand}"
@@ -79,14 +90,14 @@
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding MoveClaimText}" />
 
-            <Button
-                Grid.Row="6"
+			<Button
+                Grid.Row="8"
                 Grid.ColumnSpan="3"
                 Command="{Binding NavigateToBolCommunityPageCommand}"
                 FontAttributes="Bold"
                 FontSize="8"
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding CommunityText}" />
-        </Grid>
-    </ScrollView>
+		</Grid>
+	</ScrollView>
 </ContentPage>
